Changelog
=========

0.7.10 (unreleased)
-------------------

- Nothing changed yet.


0.7.9 (2017-03-16)
------------------

- Fix sitemap catalog search [lucabel].


0.7.8 (2016-11-03)
------------------

- Fix problem with viewlts when in portlet edit view [lucabel]

0.7.7 (unreleased)
------------------

- Fix problem with some import in Plone4 trying to have single version for both P4 and P5 [lucabel]


0.7.6 (2016-07-19)
------------------

- Fix problem with encoding [lucabel]


0.7.5 (2016-07-18)
------------------
-fix problem wih missing adapters [lucabel]

0.7.4 (2016-05-18)
------------------
- Microformats introduction [lucabel]

0.7.3 (2015-07-22)
------------------
- Add trivial mapper to map custom type over standard plone type in
  perseo configuration [lucabel]

0.7.2 (2015-07-22)
------------------
- Override LinguaPlone switcher to change the 301 redirect status
  with 302 [lucabel]

0.7.1 (2015-07-21)
------------------
- prepare 0.7.1 for release version [lucabel]

0.7.1.dev7 (unreleased)
-----------------------

- fix problems with meta tags (robots, title, description, keyowrd)
  [lucabel]
- test and fix problem with different kind of meta on different page
  (home, notfound, login/logout, author, search) [lucabel]
- handle in a more specific way hreflang [lucabel]
- reintroduce variables for controlpanel title, description and keywords
  [lucabel]
- fix some functionalities in order to solve problems between perseo and
- add js snippet to substitute in perseo controlpanel sitemap.xml.gz with
  a link downloading the sitemap [lucabel]
  LinguaPlone [lucabel]
- change way to handle path search when try to resolve perseo context:
  when the site it's beyond a VHM PATH_INFO it's not correctly traversable
  [lucabel]
- Fix the vocabulary removing all PloneFormGen fields [lucabel]
- Override LinguaPlone hreflang: we had introduced a more precise way to do that
  [lucabel]
- Fix hreflang href attribute [lucabel]
- Fix translation [lucabel]
